<resources>
    <string name="app_name">One Cool Thing</string>
    <string name="decoder_name">Decoder</string>
    <string name="dismiss">Close</string>
    <string name="count_total_separator">/</string>
    <string name="garbage_fill_short">Lorem ipsum dolor sit amet</string>
    <string name="garbage_fill_medium">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="garbage_fill_long"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id consequat nibh. Curabitur dictum consectetur aliquet. Aliquam sit amet libero vitae neque malesuada malesuada. Etiam nisi neque, cursus porttitor blandit eu, rhoncus eget ex. Phasellus dignissim ipsum vitae tincidunt vehicula. Nulla molestie finibus arcu, non ullamcorper sapien sollicitudin quis. Ut eu elit sed ante pretium cursus mattis non mi. Sed blandit rutrum sapien id tincidunt. Nunc ex sapien, rutrum quis diam quis, malesuada finibus dui.\n\nNam ultricies quis lacus sed volutpat. Nulla sed quam in mi condimentum posuere. Donec sed tincidunt ligula. Aenean euismod eleifend dictum. Vivamus dolor elit, gravida at volutpat sit amet, tincidunt ac arcu. Sed placerat enim nec justo suscipit, a condimentum nibh sollicitudin. Mauris rhoncus vel sapien dignissim pharetra. Nunc vestibulum, erat at scelerisque scelerisque, diam eros aliquet tellus, quis hendrerit nisi lectus sit amet libero. Proin et nisi ac augue vestibulum rutrum vel eget est. Vivamus elementum urna sit amet ex porta molestie. Nullam congue euismod est, nec bibendum urna porta vel. Cras convallis a massa id placerat. Morbi a fermentum nisi. Duis mattis et dui at sodales.\n\nNullam quis libero et tortor finibus euismod non non nisi. Ut cursus et turpis vel efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec quis leo erat. Phasellus nec euismod neque. Donec condimentum magna quis bibendum pharetra. Morbi fringilla tincidunt erat fringilla vehicula. Phasellus orci tellus, imperdiet sed ultrices vitae, tristique et libero. Proin condimentum tincidunt lobortis. Nunc ligula lectus, ultricies ac rhoncus nec, fermentum eu est. Aliquam et tellus metus. Etiam egestas quam in leo venenatis tempor.\n\nVivamus pretium a risus ut volutpat. Nulla at ornare velit. Curabitur dolor massa, dictum a orci nec, consectetur molestie elit. Donec convallis mi sed neque interdum, ac euismod urna pharetra. Duis lobortis commodo quam, et suscipit nibh luctus ut. Donec iaculis facilisis consectetur. Ut maximus est risus, nec tincidunt sapien ornare in. Ut elit felis, bibendum convallis tincidunt at, pellentesque vitae nulla. Nam molestie ante luctus mi finibus, non posuere lacus consectetur. Curabitur mattis nulla vel massa viverra egestas. Nam a nisi id lorem cursus imperdiet. Nulla nisl ipsum, condimentum ut quam id, hendrerit aliquet ante. </string>
    <string name="actionbar_onecoolthing">One Cool Thing</string>
    <string name="actionbar_micheng">The Michigan Engineer</string>
    <string name="left_drawer_title">More Cool Things</string>
    <string name="share_intro">Share This Cool Thing</string>
    <string name="tap_for_more">\nTap for more &gt;</string>
    <string name="title_section1">Test 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="noconnection_dialog_title">Internet Connection Error</string>
    <string name="noconnection_dialog_message">Failed to connect to the internet. Would you like to check your internet settings?</string>
    <string name="noconnection_dialog_yes">Yes, open settings</string>
    <string name="noconnection_dialog_no">No, go back</string>
    <string name="notification_title">One Cool Thing</string>
    <string name="notification_subject">Get your daily dose of Cool.</string>
    <string-array name="nav_items">
        <item name="nav_OneCoolFeed">One Cool Feed</item>
        <item name="nav_MichiganEngineerMag">Michigan Engineer Mag</item>
        <item name="nav-LabLog">LabLog</item>
        <item name="nav_VisualAdventures">Visual Adventures</item>
        <item name="nav_LoveA2">I &lt;3 A2</item>
        <item name="nav_SomeCoolApps">Some Cool Apps</item>
        <item name="nav_MichEpedia">MichEpedia</item>
        <item name="nav_Decoder">Decoder</item>
        <item name="nav_About">About One Cool Thing</item>
        <item name="nav_SendCool">Send Us Cool Things</item>
        <item name="nav_Settings">Options</item>
    </string-array>
    <string-array name="nav_items_urls">
        <item name="nav_OneCoolFeed"></item>
        <item name="nav_MichiganEngineerMag"></item>
        <item name="nav-LabLog">http://umengineeringlablog.tumblr.com/</item>
        <item name="nav_VisualAdventures">http://michiganengineering.tumblr.com/</item>
        <item name="nav_LoveA2">http://iloveannarbor.tumblr.com/</item>
        <item name="nav_SomeCoolApps">http://somecoolapps.tumblr.com/</item>
        <item name="nav_MichEpedia">http://m.youtube.com/playlist?list=PL08851138B834B69B</item>
        <item name="nav_Decoder"></item>
        <item name="nav_About"></item>
        <item name="nav_SendCool"></item>
        <item name="nav_Settings"></item>
    </string-array>
    <string name="about_privacypolicy">One Cool Thing - Privacy Policy\n\nThis privacy policy governs your use of the One Cool Thing software application (“Application”) on a mobile device that was created by The University of Michigan College of Engineering. The Application includes a daily feed of One Cool Thing posts, social media sharing, stories from The Michigan Engineer magazine, I&lt;3A2, LabLog and Visual Adventure feeds, MichEpedia videos and Decoder feature. \n\nUser-Provided Information – There is no registration and no user-provided information is collected.\n\nAutomatically Collected Information – To optimize your experience using One Cool Thing, the Application may collect information about your device, which can help us deliver appropriately sized images and other content. The Application may also collect information about your time zone in order to deliver updates at a regularly occurring time of the day. The Application may collect other information automatically, such as the type of mobile device you use, your mobile devices unique device ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browsers you use, and information about the way you use the Application. \n\nThis Application does not collect precise information about the location of your mobile device.\n\nAccess by third-parties to information obtained by the Application \nWe will share information with third parties only in the ways that are described in this privacy statement. A third-party may be used to analyze the automatically collected information to provide generalized metrics on stories and clicks. We may disclose Automatically Collected Information as required by law, such as to comply with a subpoena, or similar legal process; when we believe in good faith that disclosure is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, or respond to a government request; with our trusted services providers who work on our behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.\n\nOpt-out of all information collection by uninstalling the Application – You can stop all collection of information by the Application easily by uninstalling the Application. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network.\n\nChildren\nWe do not use the Application to knowingly solicit data from or market to children under the age of 13. If a parent or guardian becomes aware that his or her child has provided us with information without their consent, he or she should contact us at OneCoolThing@umich.edu. We will delete such information from our files within a reasonable time.\n\nSecurity\nWe are concerned about safeguarding the confidentiality of your information. We provide physical, electronic, and procedural safeguards to protect information we process and maintain. For example, we limit access to this information to authorized employees and contractors who need to know that information in order to operate, develop or improve our Application. Please be aware that, although we endeavor to provide reasonable security for information we process and maintain, no security system can prevent all potential security breaches.\n\nChanges\nThis Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here: www.onecoolthing.engin.umich.edu\nYou are advised to consult this Privacy Policy regularly for any changes.\n\nYour Consent\nBy using the Application, you are consenting to our processing of User Provided and Automatically Collection information as set forth in this Privacy Policy now and as amended by us. "Processing,” means using cookies on a computer/hand held device or using or touching information in any way, including, but not limited to, collecting, storing, deleting, using, combining and disclosing information, all of which activities will take place in the United States. If you reside outside the U.S. your information will be transferred to the U.S., and processed and stored there under U.S. privacy standards. By using the Application and providing information to us, you consent to such transfer to, and processing in, the US.\n\nContact us\nIf you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at OneCoolThing@umich.edu.</string>
    <string name="settings_click_tutorial">Click here to re-enable tutorial</string>
    <string name="settings_click_shakeforrandom">Shake for Random</string>
    <string name="settings_dailyDoseOfCool">Get your daily dose of cool</string>
    <string name="settings_notiftime">Notification time:</string>
    <string name="sendcool_description">We\'re always on the look out for cool things to include in One Cool Thing. If you have an idea or suggestion, please send us a message. Be sure to include as much info as you can, including images and a url, if you have them.</string>
    <string name="sendcool_sendbutton">Click here to send us a message.</string>
    <string name="customfont_normal">Nunito-Regular.ttf</string>
    <string name="customfont_bold">Nunito-Bold.ttf</string>
    <string name="customfont_light">Nunito-Light.ttf</string>
</resources>