<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:onecoolthing="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margin_general"
        android:layout_marginRight="@dimen/margin_general">

        <edu.umich.engin.cm.onecoolthing.Util.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="?android:actionBarSize"
            android:text="@string/about_privacypolicy"
            android:textColor="@color/black"
            android:textSize="@dimen/text_about_main"
            onecoolthing:fontName="@string/customfont_light"/>

        </ScrollView>

    <Button
        android:id="@+id/button_dismiss"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dismiss"/>
</LinearLayout>