<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:onecoolthing="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <edu.umich.engin.cm.onecoolthing.Util.SquareImageView
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:actionBarSize"
        android:src="@drawable/loading_spinner"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_memdetailed_descriptionoffsetleft">
        <!-- The opening titles -->
        <edu.umich.engin.cm.onecoolthing.Util.CustomFontTextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_memdetialed_titlemain_topnbottomoffsets"
            android:layout_marginBottom="@dimen/margin_memdetialed_titlemain_topnbottomoffsets"
            android:text="@string/garbage_fill_short"
            android:textColor="@color/black"
            android:textSize="@dimen/text_memdetailed_title_main"
            onecoolthing:fontName="@string/customfont_bold"/>

        <edu.umich.engin.cm.onecoolthing.Util.CustomFontTextView
            android:id="@+id/title_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_memdetailed_titlecategory_bottomoffset"
            android:text="@string/garbage_fill_short"
            android:textColor="@color/black"
            android:textSize="@dimen/text_memdetailed_title_other"
            onecoolthing:fontName="@string/customfont_normal"/>

        <edu.umich.engin.cm.onecoolthing.Util.CustomFontTextView
            android:id="@+id/title_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_memdetailed_titleauthor_bottomoffset"
            android:text="@string/garbage_fill_short"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/text_memdetailed_title_other"
            onecoolthing:fontName="@string/customfont_normal"/>
    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</ScrollView>